--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: teya_pos_sdk
 description: Flutter plugin for Teya PosLink SDK (Android only)
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/khizar1556/teya_pos_sdk
+repository: https://github.com/khizar1556/teya_pos_sdk
+issue_tracker: https://github.com/khizar1556/teya_pos_sdk/issues
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
